Fix big-endian support. TULIP_BUSMODE_BIGENDIAN does bswap packet buffers also, so we should use TULIP_BUSMODE_DESC_BIGENDIAN on big-endian machines. (PR 7027)

XXX 21040 doesn't have this bit, but supporting only 21041+ is better than
    nothing.